# core

./: Cargo.toml  README.md  config.toml  config.yml  docker-compose.yml
.github/workflows/: rust.yml
shim/: tel.html
src/: config.rs  error.rs  main.rs  methods.rs  options.rs  sentry.rs  start.rs
src/methods/: auth.rs  comm.rs
static/: base.css
