[package]
name = "id-contact-core"
version = "0.1.0"
authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
edition = "2018"

[dependencies]
id-contact-sentry = { git = "https://github.com/id-contact/id-contact-sentry.git" }
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
josekit = "0.7.1"
log = "0.4.14"
reqwest = { version = "0.11.3", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
urlencoding = "1.3.3"

[dev-dependencies]
figment = { version = "0.10.5", features = ["env", "toml", "json"] }
httpmock = "0.5.8"
tokio-test = "0.4.2"

[dev-dependencies.id-contact-comm-common]
git = "https://github.com/id-contact/comm-common.git"
rev = "20852f1"
features = ["auth_during_comm"]
