[package]
name = "id-contact-core"
version = "0.1.0"
authors = ["Marlon Baeten <marlon@tweedegolf.com>"]
edition = "2018"

[dependencies]
id-contact-sentry = { git = "https://github.com/id-contact/id-contact-sentry.git" }
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
josekit = "0.8.0"
log = "0.4.15"
reqwest = { version = "0.11.10", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
urlencoding = "2.1.0"

[dev-dependencies]
figment = { version = "0.10.6", features = ["env", "toml", "json"] }
httpmock = "0.6.6"
tokio-test = "0.4.2"

[dev-dependencies.id-contact-comm-common]
git = "https://github.com/id-contact/comm-common.git"
rev = "d74b798bdfe2d7b90f7271c9ef2b6fd83b7207ad"
features = ["auth_during_comm"]
